--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="./style/css.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ex2</title>
@@ -42,7 +42,7 @@
   </div>
 
 
-  <script src="js.js"></script>
+  <script src="./js/js.js"></script>
 </body>
 
 </html>
